# qt_cef

./: CMakeLists.txt  CMakePresets.json  main.cpp
assets/: Info.plist  icon.icns
script/: init_icon  web_dev
src/: Desktop.cpp  Desktop.h
src/head/: Bridge.h  Desktop.h
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  global.css  main.tsx
web/src/router/: index.tsx
web/src/themes/: vscode.css
web/src/types/: qt.d.ts  qwebchannel.d.ts
web/src/view/: Code.tsx  Home.tsx  Setting.tsx
web/src/view/Shader/: ShaderBox.tsx
